Fix animation bug on dark mode

--- a/src/assets/style-cat.css
+++ b/src/assets/style-cat.css
@@ -1,7 +1,7 @@
 /*To change to original background,search the #E7DFDD*/
 body {
     /*background-color: #E7DFDD;*/
-    background-color: var(--el-bg-color);
+    background-color: #ffffff;
 }
 
 .loading-cat {
@@ -30,7 +30,7 @@ body {
     border: 5px solid #514E51;
     border-radius: 50%;
     /*background-color: #E7DFDD;*/
-    background-color: var(--el-bg-color);
+    background-color: #ffffff;
 
 }
 
@@ -50,7 +50,7 @@ body {
     width: 50%;
     height: 50%;
     /*background-color: #E7DFDD;*/
-    background-color: var(--el-bg-color);
+    background-color: #ffffff;
     transform-origin: right bottom;
     text-align: justify;
 }
@@ -62,7 +62,7 @@ body {
     width: 100%;
     height: 100%;
     /*background-color: #E7DFDD;*/
-    background-color: var(--el-bg-color);
+    background-color: #ffffff;
     transform-origin: left bottom;
 }
 
@@ -73,7 +73,7 @@ body {
     width: 100%;
     height: 100%;
     /*background-color: #E7DFDD;*/
-    background-color: var(--el-bg-color);
+    background-color: #ffffff;
     transform-origin: right top;
 }
 
@@ -84,7 +84,7 @@ body {
     width: 50%;
     height: 50%;
     /*background-color: #E7DFDD;*/
-    background-color: var(--el-bg-color);
+    background-color: #ffffff;
     transform-origin: left bottom;
 }
 
@@ -287,7 +287,7 @@ body {
     width: 50%;
     height: 50%;
     /*background-color: #E7DFDD;*/
-    background-color: var(--el-bg-color);
+    background-color: #ffffff;
     transform-origin: right top;
 }
 
